@@ -1,6 +1,7 @@
 v4.3
 * Fixed bug of the arg "include" in plot.gts, when there are not yearly data.
 * Fixed bug in combinef(), when it handles a simple hierarchy with 2 levels.
+* Improved arg "characters" in hts() to automate the node structure.
 
 v4.2 (25 Mar 2014)
 * Fixed Next.Generic error in accuracy.gts.
